[package]
name = "gas_calibration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
nnls = "0.3.0"
rayon = "1.5.3"
ndarray = { version="0.15", features = ["approx-0_5"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
pbr = { git = "https://github.com/a8m/pb" }
massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", branch = "feature/gas_calibration_middleware", features = ["gas_calibration"] }
massa-models = { git = "https://github.com/massalabs/massa", package = "massa_models", branch = "gas_calibration" }
massa-signature = { git = "https://github.com/massalabs/massa", package = "massa_signature", branch = "gas_calibration" }
massa-execution-worker = { git = "https://github.com/massalabs/massa", package = "massa_execution_worker", branch = "gas_calibration", features = ["gas_calibration"] }
rand = "0.8.5"